--- a/build.gradle
+++ b/build.gradle
@@ -18,7 +18,9 @@ android {
         }
     }
 }
-
+repositories {
+    maven { url "https://jitpack.io" }
+}
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'androidx.appcompat:appcompat:1.0.2'
@@ -51,4 +53,7 @@ dependencies {
     implementation 'com.parse.bolts:bolts-android:1.4.0'
     implementation 'com.parse:parse-android:1.17.3'
     implementation 'com.squareup.okhttp3:logging-interceptor:3.8.1'
+    //noinspection GradleCompatible
+    implementation "com.android.support:support-core-utils:28.0.0"
+    implementation 'com.github.bumptech.glide:glide:3.8.0'
 }
